# cudaLearn

./: .gitignore  CMakeLists.txt
reduce_project/: CMakeLists.txt  reduce.cu
